# Radar-Gesture-Recognition

./: .gitignore  .gitmodules  README.md  gesture_recognition_model.onnx  requirements.txt  requirements_all.txt  sender.py  test.py  tvm_params.params
archieve/: CMakeLists.txt  config.cmake  data_chunks.py  dataset_clean__.py  dataset_clean_npz.py  main.cpp  main_radar copy.py  main_radar__.py  tvm_params.params
archieve/tvm_model_c_extracted/: metadata.json
archieve/tvm_model_c_extracted/codegen/host/include/: tvmgen_default.h
archieve/tvm_model_c_extracted/codegen/host/src/: default_lib0.c  default_lib1.c
config/: config.yaml  config_250718.yaml  config_250721.yaml  config_250801.yaml  config_250805.yaml  config_250811_mid.yaml  config_250811_simple.yaml  config_test.yaml  filelist.txt
cpp_inference/: CMakeLists.txt  graph.json  main.cpp  main_c.cpp  main_inference.cpp  main_so.cpp  run_model
cpp_inference/include/data/samples/: class0_input.h  class0_logits.h  class0_softmax.h  class1_input.h  class1_logits.h  class1_softmax.h  class2_input.h  class2_logits.h  class2_softmax.h  class3_input.h  class3_logits.h  class3_softmax.h  test_samples.tar
cpp_inference/model-micro/: metadata.json
cpp_inference/model-micro-ifxdataset/: metadata.json
cpp_inference/model-micro-ifxdataset/codegen/host/include/: tvmgen_default.h
cpp_inference/model-micro-ifxdataset/codegen/host/src/: default_lib0.c  default_lib1.c
cpp_inference/model-micro-ifxdataset/src/: default.relay
cpp_inference/model-micro/codegen/host/include/: tvmgen_default.h
cpp_inference/model-micro/codegen/host/src/: default_lib0.c  default_lib1.c
cpp_inference/model-micro/src/: default.relay
runs/: events.out.tfevents.1747737359.ISCNPF4GDPXY.102776.0  events.out.tfevents.1747743659.ISCNPF4GDPXY.147363.0  events.out.tfevents.1747743946.ISCNPF4GDPXY.149705.0  events.out.tfevents.1747744233.ISCNPF4GDPXY.151923.0  events.out.tfevents.1747749662.ISCNPF4GDPXY.195388.0  events.out.tfevents.1747749701.ISCNPF4GDPXY.195719.0  events.out.tfevents.1747808162.ISCNPF4GDPXY.227401.0  events.out.tfevents.1747808353.ISCNPF4GDPXY.228457.0  events.out.tfevents.1747809361.ISCNPF4GDPXY.234140.0  events.out.tfevents.1747812751.ISCNPF4GDPXY.251537.0  events.out.tfevents.1747815503.ISCNPF4GDPXY.267545.0
runs/run2/: events.out.tfevents.1747815486.ISCNPF4GDPXY.267414.0  events.out.tfevents.1747820112.ISCNPF4GDPXY.291741.0  events.out.tfevents.1747820156.ISCNPF4GDPXY.291967.0  events.out.tfevents.1747820175.ISCNPF4GDPXY.292122.0
runs/run4/: events.out.tfevents.1747827629.ISCNPF4GDPXY.324565.0  events.out.tfevents.1747827683.ISCNPF4GDPXY.324768.0  events.out.tfevents.1747827743.ISCNPF4GDPXY.324991.0
runs/run5/: events.out.tfevents.1747829072.ISCNPF4GDPXY.331055.0
runs/run7/: events.out.tfevents.1747832187.ISCNPF4GDPXY.348456.0
runs/run8/: events.out.tfevents.1747832684.ISCNPF4GDPXY.351271.0  events.out.tfevents.1748589897.ISCNPF4GDPXY.28992.0  events.out.tfevents.1748589929.ISCNPF4GDPXY.29548.0  events.out.tfevents.1748589954.ISCNPF4GDPXY.29944.0  events.out.tfevents.1748592862.ISCNPF4GDPXY.13431.0  events.out.tfevents.1748595514.ISCNPF4GDPXY.34858.0
runs/run_class4/: events.out.tfevents.1748607658.ISCNPF4GDPXY.75569.0  events.out.tfevents.1748609571.ISCNPF4GDPXY.87594.0
runs/run_train_0606/: events.out.tfevents.1749220148.ISCNPF4GDPXY.109801.0  events.out.tfevents.1749220457.ISCNPF4GDPXY.110853.0  events.out.tfevents.1749220598.ISCNPF4GDPXY.111654.0  events.out.tfevents.1749220630.ISCNPF4GDPXY.111817.0  events.out.tfevents.1749220729.ISCNPF4GDPXY.112258.0  events.out.tfevents.1749220992.ISCNPF4GDPXY.113583.0  events.out.tfevents.1749269816.ISCNPF4GDPXY.117402.0
runs/run_train_0613/: events.out.tfevents.1749803404.ISCNPF4GDPXY.262178.0  events.out.tfevents.1749803425.ISCNPF4GDPXY.262324.0
runs/trained_models/: radar_edge_network-current_best.pth  radar_edge_network.pth  train_0606-current_best.pth  train_0606-last.pth  train_0606.onnx  train_0606.tflite  train_0613-current_best.pth  train_0613-idx_mapping.pkl  train_0613-last.pth  train_0613.onnx  train_0613.tflite
runs_old/: events.out.tfevents.1747736924.ISCNPF4GDPXY.99943.0  events.out.tfevents.1747737070.ISCNPF4GDPXY.100868.0  events.out.tfevents.1747737220.ISCNPF4GDPXY.101828.0  events.out.tfevents.1747737344.ISCNPF4GDPXY.102630.0  events.out.tfevents.1747737402.ISCNPF4GDPXY.103158.0  events.out.tfevents.1747743695.ISCNPF4GDPXY.147714.0  events.out.tfevents.1747743837.ISCNPF4GDPXY.148751.0  events.out.tfevents.1747743917.ISCNPF4GDPXY.149359.0  events.out.tfevents.1747744011.ISCNPF4GDPXY.150333.0  events.out.tfevents.1747744195.ISCNPF4GDPXY.151503.0  events.out.tfevents.1747749593.ISCNPF4GDPXY.194790.0  events.out.tfevents.1747753024.ISCNPF4GDPXY.224330.0  events.out.tfevents.1747753082.ISCNPF4GDPXY.224752.0  events.out.tfevents.1747753319.ISCNPF4GDPXY.226285.0  events.out.tfevents.1747809349.ISCNPF4GDPXY.234026.0
runs_old/run2/: events.out.tfevents.1747821573.ISCNPF4GDPXY.301223.0  events.out.tfevents.1747821598.ISCNPF4GDPXY.301406.0  events.out.tfevents.1747821620.ISCNPF4GDPXY.301562.0
runs_old/run3/: events.out.tfevents.1747821630.ISCNPF4GDPXY.301656.0
runs_old/run4/: events.out.tfevents.1747827543.ISCNPF4GDPXY.324183.0  events.out.tfevents.1747827559.ISCNPF4GDPXY.324310.0  events.out.tfevents.1747827990.ISCNPF4GDPXY.325674.0  events.out.tfevents.1747828419.ISCNPF4GDPXY.326884.0
runs_old/run5/: events.out.tfevents.1747829085.ISCNPF4GDPXY.331147.0  events.out.tfevents.1747829747.ISCNPF4GDPXY.335432.0
runs_old/run7/: events.out.tfevents.1747831492.ISCNPF4GDPXY.344652.0  events.out.tfevents.1747831646.ISCNPF4GDPXY.345144.0
saved_model/: fingerprint.pb  saved_model.pb
src/: DBF.py  annotation.py  datacollection.py  debug.py  doppler_ori.py  inference_6_gestures.py  load_data.py  onnx_convert.py  onnx_inference.py  range-angle-map.py  rawdata_collect.py  realtime_inference.py  realtime_inference_angle.py  realtime_inference_angle_5g.py  run.sh  train.py  train_.py  train_angle.py  train_distributed.py
zz_archieve/: dataloader_time.py
(+44 files in other folders)
